<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="title_contact_detail">Contact Detail</string>
    <string name="contact_image_description">Contact Display Image</string>
    <string name="mobile_phone">Mobile Number</string>
    <string name="home_phone">Home Number</string>
    <string name="work_phone">Work Number</string>
    <string name="email_address">Email Address</string>
    <string name="home_address">Home Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="add_contact_title">Add New Contact</string>
    <string name="title_activity_edit_contact">EditContactActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="discard_title">Discard</string>
    <string name="sort_order_title">Order By</string>
    <string name="sort_first_name_title">First Name</string>
    <string name="sort_last_name_title">Last Name</string>
    <string name="sort_phone_number_title">Phone Number</string>
    <string name="search_title">Search Contacts</string>
    <string name="search_hint">Search Contacts</string>

</resources>
