<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContactActivity" >

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:typeface="monospace" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/first_name"
        android:layout_alignRight="@+id/first_name"
        android:layout_below="@+id/first_name"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/contact_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/last_name"
        android:layout_alignTop="@+id/first_name"
        android:layout_toRightOf="@+id/first_name"
        android:contentDescription="@string/contact_image_description"
        android:src="@drawable/ic_contact_picture" />

    <EditText
        android:id="@+id/mobile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_alignRight="@+id/last_name"
        android:layout_below="@+id/last_name"
        android:ems="10"
        android:hint="@string/mobile_phone"
        android:inputType="phone"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/home_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mobile_phone"
        android:layout_alignRight="@+id/mobile_phone"
        android:layout_below="@+id/mobile_phone"
        android:ems="10"
        android:hint="@string/home_phone"
        android:inputType="phone"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/work_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_phone"
        android:layout_alignRight="@+id/home_phone"
        android:layout_below="@+id/home_phone"
        android:ems="10"
        android:hint="@string/work_phone"
        android:inputType="phone"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/work_phone"
        android:layout_alignRight="@+id/work_phone"
        android:layout_below="@+id/work_phone"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/home_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_address"
        android:layout_alignRight="@+id/email_address"
        android:layout_below="@+id/email_address"
        android:ems="10"
        android:hint="@string/home_address"
        android:inputType="textPostalAddress"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_address"
        android:layout_alignRight="@+id/home_address"
        android:layout_below="@+id/home_address"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:padding="4dp"
        android:textSize="18sp"
        android:typeface="monospace" />

</RelativeLayout>